--- a/src/Views/user-profile-basic.phtml
+++ b/src/Views/user-profile-basic.phtml
@@ -1,6 +1,6 @@
 <div class="section basic">
 	<h2>
-		<a href="<?php echo UserControllerProfileModule::url($viewContext->user->name) ?>">
+		<a href="http://myanimelist.net/profile/<?php echo $viewContext->user->name ?>">
 			<?php echo $viewContext->user->name ?>
 		</a>&rsquo;s profile
 		<span class="updated" data-tooltip="Time of last data update" data-date="<?php echo date('c', strtotime($viewContext->user->processed)) ?>">
