Better globals outlook

--- a/public_html/media/css/index/globals.css
+++ b/public_html/media/css/index/globals.css
@@ -1,7 +1,10 @@
 .target {
-	width: 400px;
+	width: 470px;
 	height: 210px;
 }
 ul.infobox {
 	height: 200px;
+}
+.section-body {
+	margin-bottom: 2em;
 }
