Refurbished static pages

--- a/src/Views/index-about.phtml
+++ b/src/Views/index-about.phtml
@@ -1,21 +1,43 @@
-<h1>About</h1>
+<div class="section">
+	<h2>About</h2>
+	<div class="section-body">
+		<p>MALgraph is an extension of your MyAnimeList profile, serving you various information about your data&nbsp;&ndash;&nbsp;rating distribution, favorite studios, personalized recommendations, and a lot more.</p>
+	</div>
+</div>
 
-<p>MALgraph is an extension of your MyAnimeList profile, serving you various information about your data&nbsp;&ndash;&nbsp;rating distribution, favorite studios, personalized suggestions, activity history, and a lot more.</p>
+<div class="section">
+	<h2>History</h2>
+	<div class="section-body">
+		<p>MALgraph started as a basic, minimalistic page with black bars (<a target="_blank" href="<?php echo UrlHelper::absoluteUrl('/media/img/history1.png') ?>">version one</a>), and quickly evolved to a full-fledged MAL data parser, a bit richer in colors (<a target="_blank" href="<?php echo UrlHelper::absoluteUrl('/media/img/history2.png') ?>">version two</a>). At some point we realized it had too much information to be shown in a single cluster, so we decided to split it into tabs, thus creating Mg3.</p>
+		<p>Continuing the tradition of writing 95% of the code from scratch, Mg4 has been born, with cleaner interface free from clutter and new features suggested by users in <a target="_blank" href="http://myanimelist.net/clubs.php?cid=30017">our&nbsp;club</a>. Even if there aren&rsquo;t many changes visible in the outer layer, the whole engine has been replaced, and a new queuing system has been put to work.</p>
+	</div>
+</div>
 
-<p>Speaking of history, MALgraph started as a basic, minimalistic page with black bars (<a target="_blank" href="<?php echo UrlHelper::absoluteUrl('/media/img/history1.png') ?>">version one</a>), and quickly evolved to a full-fledged MAL data parser, a bit richer in colors (<a target="_blank" href="<?php echo UrlHelper::absoluteUrl('/media/img/history2.png') ?>">version two</a>). At some point we realized it had too much information to be shown in a single cluster, so we decided to split it into tabs, thus creating Mg3.</p>
+<div class="section">
+	<h2>Cogs of the machine</h2>
+	<div class="section-body">
+		<ul>
+			<li><a target="_blank" href="http://jquery.com/">jQuery</a>&nbsp;&ndash; because site would be too lightweight without those 15KB.</li>
+			<li><a target="_blank" href="http://www.highcharts.com/">Highcharts</a>&nbsp;&ndash; cool interactive charts.</li>
+			<li><a target="_blank" href="http://tablesorter.com/">Tablesorter</a>&nbsp;&ndash; nice jQuery plugin that tidies your table up.</li>
+			<li><a target="_blank" href="https://github.com/mattfarina/farbtastic">Farbtastic</a>&nbsp;&ndash; color picker used in ratings export.</li>
+			<li><a target="_blank" href="http://sqlite.org/">SQLite</a>&nbsp;&ndash; we can&rsquo;t afford real database, so we use file-driven one.</li>
+			<li><a target="_blank" href="http://php.net/">PHP 5.5</a>&nbsp;&ndash; because we like it. At least <a href="https://github.com/rr-/">rr-</a> does.</li>
+		</ul>
+	</div>
+</div>
 
-<p>Continuing the tradition of writing 95% of the code from scratch, Mg4 has been born, with cleaner interface free from clutter and new features suggested by users in <a target="_blank" href="http://myanimelist.net/clubs.php?cid=30017">our&nbsp;club</a>. Even if there aren&rsquo;t many changes visible in the outer layer, the cogs have been replaced and thoroughly oiled, and a new queuing system has been put to work.</p>
+<div class="section">
+	<h2>External links</h2>
+	<div class="section-body">
+		<ul>
+			<li><a target="_blank" href="http://myanimelist.net/clubs.php?cid=30017">MALgraph club on MAL</a>&nbsp;&ndash; a place for questions, bug reports and feature requests.</li>
+			<li><a target="_blank" href="https://github.com/rr-/malgraph4">Source code on GitHub</a>&nbsp;&ndash; see how it&rsquo;s done!</li>
+		</ul>
+	</div>
+</div>
 
-<p>MALgraph uses the following:</p>
-
-<ul>
-	<li><a target="_blank" href="http://jquery.com/">jQuery</a>&nbsp;&ndash;&nbsp;because pure JS is like asm nowadays,</li>
-	<li><a target="_blank" href="http://php.net/">PHP</a>&nbsp;&ndash;&nbsp;finally, 5.4 introduced short array syntax.</li>
-</ul>
-
-<p>Suggestions? Questions? Visit the <a target="_blank" href="http://myanimelist.net/clubs.php?cid=30017">MALgraph club</a> and ask!<br>
-We&rsquo;re on <a target="_blank" href="https://github.com/rr-/malgraph4">GitHub</a>, too.</p>
-
+<div class="fb-wrapper">
 <div id="fb-root"></div>
 <script>(function(d, s, id) {
 var js, fjs = d.getElementsByTagName(s)[0];
@@ -25,3 +47,4 @@ js.src = "//connect.facebook.net/en_US/all.js#xfbml=1";
 fjs.parentNode.insertBefore(js, fjs);
 }(document, 'script', 'facebook-jssdk'));</script>
 <div class="fb-like" data-href="https://www.facebook.com/MALgraph" data-send="false" data-width="450" data-show-faces="true"></div>
+</div>
