--- a/src/Views/index-privacy.phtml
+++ b/src/Views/index-privacy.phtml
@@ -1,18 +1,30 @@
-<h1>Privacy policy</h1>
+<div class="section">
+	<h2>Privacy policy</h2>
+	<div class="section-body">
+		<p>MALgraph downloads and stores publicly available data related to your MyAnimeList account, which are:</p>
 
-<p>MALgraph downloads and stores publicly available data related to your MyAnimeList account, which are:</p>
+		<ul>
+		<li>anime and manga lists,</li>
+		<li>friends and clubs lists,</li>
+		<li>profile information (such as nickname, list views, join date, birthday, etc.),</li>
+		<li>activity history (episodes watched and chapters read) from the last month.</li>
+		</ul>
 
-<ul>
-<li>anime and manga lists,</li>
-<li>friends and clubs lists,</li>
-<li>profile information (such as nickname, list views, join date, birthday, etc.),</li>
-<li>activity history (episodes watched and chapters read) from the last month.</li>
-</ul>
+		<p>In addition, your anime and manga scores are used in the recommendations module, which picks a few dozen random users and bases the suggestions on anonymous scores.</p>
 
-<p>In addition, your anime and manga scores are used in the recommendations module, which picks a few dozen random users and bases the suggestions on anonymous scores.</p>
+		<p>We have to make sure your lists aren&rsquo;t private, so each refresh of your data (soon after adding you to the queue) will bump up your list and profile views counters by one. The content of private lists will be hidden, and recommendations won&rsquo;t be available.</p>
 
-<p>Each refresh of your data, which happens as soon as possible after enqueueing your user name into processing queue, will bump up your list and profile views counters by one. Although we use the API to read your lists, we make sure they&rsquo;re not private by visiting them directly - if they are, their content will be hidden. Note that some parts of this site, e.g. recommendations, will not work with private lists.</p>
+		<p>In short, you can sleep well - we&rsquo;re not evil and respect your privacy. If you still feel insecure, you can <a target="_blank" href="http://myanimelist.net/mymessages.php?go=send&amp;toname=fri">ask us</a> to block your profile from being displayed here.</p>
+	</div>
+</div>
 
-<p>In short, you can sleep well - we&rsquo;re not evil and respect your privacy. If you still feel insecure, you can <a target="_blank" href="http://myanimelist.net/mymessages.php?go=send&amp;toname=fri">ask us</a> to block your profile from being displayed here.</p>
+<div class="section">
+	<h2>Cookies</h2>
+	<div class="section-body">
+		<p>By European Union&rsquo;s definition, cookies are extremely dangerous shards of pure evil scattered around the Internet, and pages hosted within EU have to put a warning regarding user&rsquo;s safety.</p>
 
-<p>Twitter and Facebook share buttons always link back to the tab you&rsquo;re currently in, so you might want to return to the profile before clicking on them.</p>
+		<p>These crunchy things are used to let you filter out titles in Missing titles module, by Analytics to give us feedback about the usage, and by AdSense that shows you advertisement banners that you probably blocked and caused us to starve.</p>
+
+		<p>If you want, you can block accepting cookies in your browser&rsquo;s settings, limiting the browsing experience at the same time. But hey, safety first!</p>
+	</div>
+</div>
