--- a/src/Views/error-user-blocked.phtml
+++ b/src/Views/error-user-blocked.phtml
@@ -1,3 +1,6 @@
-<h1>User blocked.</h1>
-
-<p><?php echo $viewContext->userName ?>  requested to block their profile from being displayed here.</p>
+<div class="section">
+	<h2>User blocked.</h2>
+	<div class="section-body">
+		<p><?php echo $viewContext->userName ?>  requested to block their profile from being displayed here.</p>
+	</div>
+</div>
