--- a/src/Views/error-user-enqueued.phtml
+++ b/src/Views/error-user-enqueued.phtml
@@ -1,16 +1,20 @@
-<h2>Okay!</h2>
-<div style="text-align: center">
-<p>Successfully added <?php echo $viewContext->userName ?> to queue at position <?php echo $viewContext->queuePosition ?>.</p>
+<div class="section">
+	<h2>Okay!</h2>
+	<div class="section-body">
+		<div style="text-align: center">
+		<p>Successfully added <?php echo $viewContext->userName ?> to queue at position <?php echo $viewContext->queuePosition ?>.</p>
 
-<?php $min = ceil($viewContext->queuePosition / Config::$usersPerCronRun) ?>
-<p>Since MALgraph processes about <?php echo Config::$usersPerCronRun ?>  users per minute,<br>
-this shouldn&rsquo;t take more than <?php printf('%d %s', $min, $min > 1 ? 'minutes' : 'minute') ?>.</p>
-<p>This page will refresh automatically once your stats are ready.</p>
+		<?php $min = ceil($viewContext->queuePosition / Config::$usersPerCronRun) ?>
+		<p>Since MALgraph processes about <?php echo Config::$usersPerCronRun ?>  users per minute,<br>
+		this shouldn&rsquo;t take more than <?php printf('%d %s', $min, $min > 1 ? 'minutes' : 'minute') ?>.</p>
+		<p>This page will refresh automatically once your stats are ready.</p>
+		</div>
+
+		<script type="text/javascript">
+		window.setTimeout(<?php echo $min ?> * 1000, function()
+		{
+			window.location.reload();
+		});
+		</script>
+	</div>
 </div>
-
-<script type="text/javascript">
-window.setTimeout(<?php echo $min ?> * 1000, function()
-{
-	window.location.reload();
-});
-</script>
