--- a/src/Views/user-ratings-length-dist.phtml
+++ b/src/Views/user-ratings-length-dist.phtml
@@ -96,7 +96,9 @@
 							{
 								text: 'Title count',
 								margin: 10,
-							}
+							},
+							gridLineWidth: 0,
+							minorGridLineWidth: 0
 						}
 					],
 
